[gd_scene load_steps=8 format=3 uid="uid://cdktagu70ufhi"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_653vl"]
[ext_resource type="StyleBox" uid="uid://bc0aj2t7h7qmq" path="res://Assets/GUI/button_upgrade_normal_hover_pressed_style_box_flat.tres" id="2_d0rh6"]
[ext_resource type="StyleBox" uid="uid://bq1780d0em585" path="res://Assets/GUI/button_upgrade_disabled_style_box_flat.tres" id="3_ljy7s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ix8s"]
bg_color = Color(1, 1, 1, 0.12549)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fphdb"]
bg_color = Color(0, 0.35, 1, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxv3t"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0f6o"]
bg_color = Color(0.92549, 0.294118, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_653vl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Water" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.304167
anchor_top = 0.0901235
anchor_right = 0.683333
anchor_bottom = 0.385185
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0ix8s")
theme_override_styles/fill = SubResource("StyleBoxFlat_fphdb")
value = 25.0
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Container" type="Button" parent="Water"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 12
action_mode = 0
text = "0L"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Money" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.035
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 20.32
grow_horizontal = 2
text = "Money: 0G"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Container" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.385185
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qxv3t")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="VBoxContainer3" type="VBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2

[node name="Convertion Rate Text" type="RichTextLabel" parent="Container/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Convertion Rate: 1L = 1G
Level: 0"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Button Sell" type="Button" parent="Container/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_i0f6o")
theme_override_styles/hover = SubResource("StyleBoxFlat_i0f6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0f6o")
text = "SELL"

[node name="Button Sell Upgrade" type="Button" parent="Container/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_d0rh6")
theme_override_styles/hover = ExtResource("2_d0rh6")
theme_override_styles/pressed = ExtResource("2_d0rh6")
theme_override_styles/disabled = ExtResource("3_ljy7s")
text = "Upgrade
+0.1G/Level
Cost: 0G"

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2

[node name="Water Drop Text" type="RichTextLabel" parent="Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
text = "Water Drop: 0.01L/Click
Level: 0"
fit_content = true

[node name="Water Drop Upgrade" type="Button" parent="Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_d0rh6")
theme_override_styles/hover = ExtResource("2_d0rh6")
theme_override_styles/pressed = ExtResource("2_d0rh6")
theme_override_styles/disabled = ExtResource("3_ljy7s")
text = "Upgrade
+0.02L/Level
Cost: 0G"

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2

[node name="Capacity Text" type="RichTextLabel" parent="Container/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
text = "Capacity: 0.5L
Level: 0"
fit_content = true

[node name="Capacity Upgrade" type="Button" parent="Container/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_d0rh6")
theme_override_styles/hover = ExtResource("2_d0rh6")
theme_override_styles/pressed = ExtResource("2_d0rh6")
theme_override_styles/disabled = ExtResource("3_ljy7s")
text = "Upgrade
+0.5L/Level
Cost: 0G"

[node name="HBoxContainer4" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2

[node name="Auto Drop Rate Text" type="RichTextLabel" parent="Container/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
text = "Auto Drop Rate: 0.01L/s
Level: 0"
fit_content = true

[node name="Auto Drop Upgrade" type="Button" parent="Container/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_d0rh6")
theme_override_styles/hover = ExtResource("2_d0rh6")
theme_override_styles/pressed = ExtResource("2_d0rh6")
theme_override_styles/disabled = ExtResource("3_ljy7s")
text = "Upgrade
+0.01L/Level
Cost: 0G"

[node name="HBoxContainer5" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2

[node name="Auto Sell Rate Text" type="RichTextLabel" parent="Container/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
text = "Auto Sell Rate: 0.01L/s
Level: 0"
fit_content = true

[node name="Auto Sell Upgrade" type="Button" parent="Container/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_d0rh6")
theme_override_styles/hover = ExtResource("2_d0rh6")
theme_override_styles/pressed = ExtResource("2_d0rh6")
theme_override_styles/disabled = ExtResource("3_ljy7s")
text = "Upgrade
+0.01L/Level
Cost: 0G"

[node name="Auto Drop" type="Timer" parent="."]
autostart = true

[node name="Auto Sell" type="Timer" parent="."]
autostart = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="Water/Container" to="." method="_on_container_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/VBoxContainer3/HBoxContainer/Button Sell" to="." method="_on_button_sell_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/VBoxContainer3/HBoxContainer/Button Sell Upgrade" to="." method="_on_button_sell_upgrade_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/Water Drop Upgrade" to="." method="_on_water_drop_upgrade_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer2/Capacity Upgrade" to="." method="_on_capacity_upgrade_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer4/Auto Drop Upgrade" to="." method="_on_auto_drop_upgrade_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer5/Auto Sell Upgrade" to="." method="_on_auto_sell_upgrade_pressed"]
[connection signal="timeout" from="Auto Drop" to="." method="_on_auto_drop_timeout"]
[connection signal="timeout" from="Auto Sell" to="." method="_on_auto_sell_timeout"]
